--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "walisph/news",
-    "description": "",
+    "description": "A News library for Walis Apps",
+    "license": "MIT",
     "authors": [
         {
             "name": "Walis Philippines",
@@ -9,15 +10,15 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "5.0.*"
+        "illuminate/support": "4.2.*|5.0.*"
     },
     "autoload": {
         "classmap": [
             "src/migrations",
             "src/controllers"
         ],
-        "psr-0": {
-            "Walisph\\News\\": "src/"
+        "psr-4": {
+            "Walisph\\News\\": "src"
         }
     },
     "minimum-stability": "dev"
